Added author name to APex classes

--- a/force-app/main/default/classes/Environment.cls
+++ b/force-app/main/default/classes/Environment.cls
@@ -1,3 +1,6 @@
+/*
+* @author : Davide Arena 
+*/
 public without sharing class Environment {
 	public static final System.URL ORG_DOMAIN_URL = System.URL.getOrgDomainUrl();
 	public static final String SANDBOX_NAME= DomainParser.parse(ORG_DOMAIN_URL).getSandboxName();
