--- a/force-app/main/default/classes/Promise.cls
+++ b/force-app/main/default/classes/Promise.cls
@@ -1,3 +1,6 @@
+/*
+* @author : Davide Arena 
+*/
 Public Virtual Class Promise Implements Queueable, Database.AllowsCallouts {
 
     //   ___           _                     __     __
