Added test method for Environment.isSandbox()

--- a/force-app/main/default/classes/EnvironmentTest.cls
+++ b/force-app/main/default/classes/EnvironmentTest.cls
@@ -3,5 +3,12 @@
 */
 @IsTest
 public with sharing class EnvironmentTest {
-    
+    @IsTest
+    static void testIsSandbox(){
+        System.assertEquals(
+            Environment.SANDBOX_NAME != null,
+            Environment.isSandbox(),
+            'Environment.isSandbox returns '+Environment.isSandbox()+', but the Environment.SANDBOX_NAME is '+Environment.SANDBOX_NAME
+        );
+    }
 }
